--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <body>
         <h1>Discover hidden places in th world around you</h1>
         <center>
-            <a id="excursion-link" href="videos-images/videoexcursion.mp4">Download Excursion (Coming soon!)</a>
+            <p id="excursion-link" href="videos-images/videoexcursion.mp4">Download Excursion (Coming soon!)</p>
         </center>
         <center>
         <video autoplay muted loop> 
-            <source src="videos-images/videoexcursion.mp4" type="video/mp4">
+            <source src="videos-images/videoexcursion.mp4" type=>
         </video>
         </center>
         <h2>Your personal travel guide</h2>
@@ -24,7 +24,7 @@
         </center>
         <h1>Coming Soon for iPhone and Android</h1>
         <center>
-        <a href="videos-images/videoexcursion.mp4" id="excursion-link">Download Excursion (Coming soon!)</a>
+        <a href="#" id="excursion-link">Download Excursion (Coming soon!)</a>
         </center>
         <!--Footer-->
         <div class="footer">
